# SlicerLiteExtension

./: CMakeLists.txt  LICENSE  README.md
SlicerLite/: CMakeLists.txt  SlicerLite.py
SlicerLite/Resources/: Home.qrc
SlicerLite/SlicerLiteLib/: ButtonItemDelegate.py  DataLoader.py  Delegates.py  DicomDataLoader.py  EventFilters.py  ItemModel.py  Model.py  Settings.py  SlicerLiteModuleWidget.py  SlicerUtils.py  UIUtils.py  Utils.py  VolumeItemModel.py  __init__.py
